{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 20,
  "lineage": "5c6bfa5c-ee9e-d436-4399-67ba015a2880",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VM1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:409909364364:instance/i-09e0dced3802e3d28",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09e0dced3802e3d28",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-04a2e2e49ea1a5aec",
            "private_dns": "ip-10-0-1-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b3530d76f767d79b",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0696fdfa9b603cc5a",
            "tags": {
              "Name": "ExampleInstanceOne"
            },
            "tags_all": {
              "Name": "ExampleInstanceOne"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d0964bad68bd342"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_subnet.Terra-AWS",
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "VM2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-051f8a213df8bc089",
            "arn": "arn:aws:ec2:us-east-1:409909364364:instance/i-0c4bdeaad502b0471",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c4bdeaad502b0471",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f4bef72bde718bf4",
            "private_dns": "ip-10-0-1-23.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.23",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0b03d4f7cd9a2205f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0696fdfa9b603cc5a",
            "tags": {
              "Name": "ExampleInstanceTwo"
            },
            "tags_all": {
              "Name": "ExampleInstanceTwo"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04d0964bad68bd342"
            ]
          },
          "dependencies": [
            "aws_security_group.instance_sg",
            "aws_subnet.Terra-AWS",
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "IG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409909364364:internet-gateway/igw-08cfeb980fbb3106b",
            "id": "igw-08cfeb980fbb3106b",
            "owner_id": "409909364364",
            "vpc_id": "vpc-052e5bb29ab3654c5"
          },
          "dependencies": [
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "terraform-lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:409909364364:loadbalancer/app/terraform-lb/8ffa1dce8130ea5b",
            "arn_suffix": "app/terraform-lb/8ffa1dce8130ea5b",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "terraform-lb-1880423186.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:409909364364:loadbalancer/app/terraform-lb/8ffa1dce8130ea5b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "terraform-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0dbc58b22e606712e"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0696fdfa9b603cc5a"
              },
              {
                "subnet_id": "subnet-0b24c44ad92bfab45"
              }
            ],
            "subnets": [
              "subnet-0696fdfa9b603cc5a",
              "subnet-0b24c44ad92bfab45"
            ],
            "tags": {
              "Name": "ExampleLoadBalancer"
            },
            "tags_all": {
              "Name": "ExampleLoadBalancer"
            },
            "vpc_id": "vpc-052e5bb29ab3654c5",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.example_lb_sg",
            "aws_subnet.Terra-AWS",
            "aws_subnet.Terra-AWS2",
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:409909364364:listener/app/terraform-lb/8ffa1dce8130ea5b/4d7790edcb57e685",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:409909364364:targetgroup/example-tg/78b5dcd92d21d33a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:409909364364:listener/app/terraform-lb/8ffa1dce8130ea5b/4d7790edcb57e685",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:409909364364:loadbalancer/app/terraform-lb/8ffa1dce8130ea5b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.terraform-lb",
            "aws_lb_target_group.example",
            "aws_security_group.example_lb_sg",
            "aws_subnet.Terra-AWS",
            "aws_subnet.Terra-AWS2",
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:409909364364:targetgroup/example-tg/78b5dcd92d21d33a",
            "arn_suffix": "targetgroup/example-tg/78b5dcd92d21d33a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:409909364364:targetgroup/example-tg/78b5dcd92d21d33a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "example-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-052e5bb29ab3654c5"
          },
          "dependencies": [
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "group_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:409909364364:targetgroup/example-tg/78b5dcd92d21d33a-20240406174907030500000004",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:409909364364:targetgroup/example-tg/78b5dcd92d21d33a",
            "target_id": "i-09e0dced3802e3d28"
          },
          "dependencies": [
            "aws_instance.VM1",
            "aws_lb_target_group.example",
            "aws_security_group.instance_sg",
            "aws_subnet.Terra-AWS",
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "group_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:409909364364:targetgroup/example-tg/78b5dcd92d21d33a-20240406174857473400000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:409909364364:targetgroup/example-tg/78b5dcd92d21d33a",
            "target_id": "i-0c4bdeaad502b0471"
          },
          "dependencies": [
            "aws_instance.VM2",
            "aws_lb_target_group.example",
            "aws_security_group.instance_sg",
            "aws_subnet.Terra-AWS",
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "example_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409909364364:security-group/sg-0dbc58b22e606712e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dbc58b22e606712e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240406170156447700000002",
            "name_prefix": "terraform-",
            "owner_id": "409909364364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example_lb_sg"
            },
            "tags_all": {
              "Name": "example_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-052e5bb29ab3654c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409909364364:security-group/sg-04d0964bad68bd342",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04d0964bad68bd342",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.1.35/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20240406170156447700000001",
            "name_prefix": "terraform-",
            "owner_id": "409909364364",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "instance_sg"
            },
            "tags_all": {
              "Name": "instance_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-052e5bb29ab3654c5"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terra-AWS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409909364364:subnet/subnet-0696fdfa9b603cc5a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0696fdfa9b603cc5a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409909364364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-subnet"
            },
            "tags_all": {
              "Name": "example-subnet"
            },
            "vpc_id": "vpc-052e5bb29ab3654c5"
          },
          "dependencies": [
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Terra-AWS2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409909364364:subnet/subnet-0b24c44ad92bfab45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b24c44ad92bfab45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "409909364364",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example2-subnet"
            },
            "tags_all": {
              "Name": "example2-subnet"
            },
            "vpc_id": "vpc-052e5bb29ab3654c5"
          },
          "dependencies": [
            "aws_vpc.AWS-terraform"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "AWS-terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:409909364364:vpc/vpc-052e5bb29ab3654c5",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-05d57e75f2f2e9783",
            "default_route_table_id": "rtb-0c79189a4da4c507d",
            "default_security_group_id": "sg-06abec5a154101470",
            "dhcp_options_id": "dopt-026c02501dd2d66b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-052e5bb29ab3654c5",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c79189a4da4c507d",
            "owner_id": "409909364364",
            "tags": {
              "Name": "AWS-terraform"
            },
            "tags_all": {
              "Name": "AWS-terraform"
            }
          }
        }
      ]
    }
  ]
}